<resources>
    <string name="app_name">Chatting App</string>
    <string name="add_friend_text">추가할 친구의 이름을 입력하세요...</string>
    <string name="add_friend_button">Add</string>
    <string name="add">Add</string>

    <string name="ID">ID</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="chat_add_button">보내기</string>
    <string name="chat_add_text">내용을 입력하세요....</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
</resources>